# PPP-Big-Mac-Index

./: main.py  pyproject.toml
templates/: index.html
